--- a/tecnicaspbemestar.html
+++ b/tecnicaspbemestar.html
@@ -25,9 +25,9 @@
     <label>Selecione a técnica que mais se adapta às suas necessidades:</label>
     <br>
             <select name="tecnicas">
-                <option value="júnior">Respiração guiada</option>
-                <option value="pleno">Relaxamento muscular</option>
-                <option value="sênior">Alongamento</option>
+                <option value="respiracao">Respiração guiada</option>
+                <option value="relaxamento">Relaxamento muscular</option>
+                <option value="alongamento">Alongamento</option>
             </select>
             <br>
             <input type="submit" value="Selecionar">
