--- a/pesoeich.html
+++ b/pesoeich.html
@@ -8,6 +8,14 @@
     <title>Cálculo do IMC</title>
 </head>
 <body>
+    <nav class="menu"></nav>
+    <a href="#home" tabindex="1">Home</a>
+    <a href="#hidratacao" tabindex="2">Hidratação</a>
+    <a href="#meupeso" tabindex="3">Meu peso</a>
+    <a href="#meustreinos" tabindex="4">Meus treinos</a>
+    <a href="#reduzirestresse" tabindex="5">Reduzir estresse</a>
+    <a href="#saude" tabindex="6">Saúde</a>
+</nav>
     <main>
         <h1>Bem-vindo!</h1>
         <p>Esta seção calcula seu Índice de Massa Corporal (IMC) com base no seu peso e altura. Insira seus dados para ver sua classificação de peso e obter uma visão rápida do seu estado nutricional. Vamos começar?</p>
