--- a/acompanha_imc.html
+++ b/acompanha_imc.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/veja_imc.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veja seu IMC</title>
+    <title>Acompanhe seu IMC</title>
 </head>
 <body>
     <nav class="menu"></nav>
