mudei o endereço do css

--- a/acompanha_imc.html
+++ b/acompanha_imc.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/veja_peso.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/acompanha_peso.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veja Seu Peso</title>
